# Starlight

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.Md  Cargo.toml  README.md  SECURITY.md  Starlight.ngfx-proj  default.nix  flake.nix  shell.nix
.forgejo/workflows/: cargo_test.yml  release_nightly.yml
.github/: dependabot.yml
.github/workflows/: cargo_test.yml  codeql.yml  nix.yml  release_nightly.yml  rust.yml
assets/textures/block/: credits.md
docs/: faq.md
docs/technical/: world_pipeline.md
src/: lib.rs  main.rs
src/client/: mod.rs
src/client/renderer/: mod.rs
src/client/systems/: debug.rs  mod.rs  startup.rs  test_scene.rs
src/data/: mod.rs  pos.rs  world.rs
src/game/: debug.rs  mod.rs  perf.rs  registry.rs
src/game/mesher/: culling.rs.disabled  mod.rs
src/game/world_generator/: mod.rs  vis.rs
src/game/world_observation/: mod.rs
src/game/world_worldmgr/: mod.rs
src/runtime/: mod.rs
