[package]
name = "project_starlight"
description = "A game made with Bevy"
authors = ["Mad Star Studio, LLC"]
license = "GPLv3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_render = "0.15.0"
bevy_flycam = "*"
rand = "*"
noise = "0.9"
bevy_meshem = { git = "https://github.com/TheFelidae/Meshem.git" }
rayon = "1.5.1"